--- a/client/app/consent/directives/consentCreateEditCancelModal.html
+++ b/client/app/consent/directives/consentCreateEditCancelModal.html
@@ -8,7 +8,10 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-white m-r-xs" ng-click="CancelCreateEditConsentModalVm.cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary" ng-click="CancelCreateEditConsentModalVm.discard()">Discard Changes</button>
+        <button type="button" class="btn btn-white m-r-xs" ng-click="CancelCreateEditConsentModalVm.cancel()">Cancel
+        </button>
+        <button type="button" class="btn btn-primary" ng-click="CancelCreateEditConsentModalVm.discard()">Discard
+            Changes
+        </button>
     </div>
 </div>
