--- a/client/app/consent/directives/consentListManageOptionsModalError.html
+++ b/client/app/consent/directives/consentListManageOptionsModalError.html
@@ -1,8 +1,11 @@
 <div class="inmodal">
     <div class="modal-header">
-        <c2s-consent-modal-header option="manageConsentModalVm.option" cancel="manageConsentModalVm.cancel()"></c2s-consent-modal-header>
+        <c2s-consent-modal-header option="manageConsentModalVm.option"
+                                  cancel="manageConsentModalVm.cancel()"></c2s-consent-modal-header>
     </div>
     <div class="modal-body">
-        <div class="alert alert-danger"><strong>ERROR:</strong> Invalid consent state. Please contact to system administrator.</div>
+        <div class="alert alert-danger"><strong>ERROR:</strong> Invalid consent state. Please contact to system
+            administrator.
+        </div>
     </div>
 </div>
