--- a/client/app/consent/directives/consentRevokeConfirmation.html
+++ b/client/app/consent/directives/consentRevokeConfirmation.html
@@ -2,7 +2,8 @@
     <div class="col-sm-12">
         <div class="row">
             <div class="col-sm-12">
-                <h2 class="m-t-none"><strong>Revocation of Consent to Participate in Health Information Exchange</strong></h2>
+                <h2 class="m-t-none"><strong>Revocation of Consent to Participate in Health Information
+                    Exchange</strong></h2>
                 <div class="">
                     <p class="m-b-xxs">Consent Reference Number:</p>
                     <p><strong ng-bind="consentRevokeVm.revokeAttestation.consentReferenceId"></strong></p>
@@ -18,16 +19,15 @@
             </div>
         </div>
         <br/>
-
         <div class="row">
             <div class="col-sm-12">
                 <span class="pre-wrap" ng-bind="consentRevokeVm.revokeAttestation.consentRevokeTermsText"></span>
             </div>
         </div>
-
         <br/>
         <div>
-            <input type="checkbox" c2s-icheck ng-model="consentRevokeVm.revokeAttestation.acceptTerms" ng-change="consentRevokeVm.onchecked()">
+            <input type="checkbox" c2s-icheck ng-model="consentRevokeVm.revokeAttestation.acceptTerms"
+                   ng-change="consentRevokeVm.onchecked()">
             <span>I, <strong ng-bind="consentRevokeVm.revokeAttestation.patient | fullName"></strong>, hereby accept, and understand the terms of this consent.</span>
         </div>
     </div>
@@ -35,7 +35,9 @@
         <div class="col-md-12">
             <div class="pull-right">
                 <button class="btn btn-white m-r" ng-click="consentRevokeVm.cancel()">Cancel</button>
-                <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentRevokeVm.isAuthenticated" ng-click="consentRevokeVm.sign()">Complete</button>
+                <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentRevokeVm.isAuthenticated"
+                        ng-click="consentRevokeVm.sign()">Complete
+                </button>
             </div>
         </div>
     </div>
