--- a/client/app/consent/directives/consentPreviewAttestationModal.html
+++ b/client/app/consent/directives/consentPreviewAttestationModal.html
@@ -1,4 +1,4 @@
-<div class="inmodal" ng-form >
+<div class="inmodal" ng-form>
     <div class="modal-header">
         <h4 class="modal-title">Success in created Signed Consent.</h4>
     </div>
@@ -6,11 +6,12 @@
         <div class="row">
             <div class="col-sm-12 center">
                 <span>
-                    <button class="btn btn-primary dark-green"  ng-click="attestedConsentModalVm.downloadAttestedConsentAndRedirectToConsentList()">
+                    <button class="btn btn-primary dark-green"
+                            ng-click="attestedConsentModalVm.downloadAttestedConsentAndRedirectToConsentList()">
                         Download Signed Consent
                     </button>
                 </span>
-                <span> <button class="btn btn-white m-r"   ui-sref="fe.consent.list">Continue</button> </span>
+                <span> <button class="btn btn-white m-r" ui-sref="fe.consent.list">Continue</button> </span>
             </div>
 
         </div>
