--- a/client/app/consent/directives/consentProviderSelectModal.html
+++ b/client/app/consent/directives/consentProviderSelectModal.html
@@ -3,43 +3,54 @@
         <h2 class="modal-title"><span ng-bind="selectProviderModalVm.title"></span></h2>
     </div>
     <div class="modal-body">
-                <p ng-if="!selectProviderModalVm.hasAtLeastTwoProviders()|| selectProviderModalVm.hasNoProviders()">In order to create a consent, you must add at least <strong>two Health Providers</strong></p>
-                <p ng-if="!selectProviderModalVm.hasAtLeastTwoProviders()|| selectProviderModalVm.hasNoProviders()"><a class="btn btn-primary dark-green" ui-sref="fe.provider.lookup">Add a Health Provider</a></p>
-                <p ng-if="selectProviderModalVm.hasAtLeastTwoProviders() && selectProviderModalVm.title === 'Authorize'">Please select <strong>one</strong> individual or organization authorized to share your information:</p>
-                <p ng-if="selectProviderModalVm.hasAtLeastTwoProviders() && selectProviderModalVm.title === 'Disclosure'">Please select <strong>one</strong> individual or organization for disclosure:</p>
-                <div class="row">
-                    <div class="col-sm-12 m-b-xs">
-                        <h2 ng-if="!selectProviderModalVm.hasNoProviders()"><strong>Individuals:</strong></h2>
-                        <div ng-repeat="provider in selectProviderModalVm.providers">
-                                <div ng-if="selectProviderModalVm.isIndividualProvider(provider)">
-                                    <div class="radio">
-                                        <label>
-                                            <input type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
-                                                <span class="m-l-xs" ng-bind="provider|pcmProviderNameOrFacility"> </span>
-                                        </label>
-                                    </div>
-                                </div>
+        <p ng-if="!selectProviderModalVm.hasAtLeastTwoProviders()|| selectProviderModalVm.hasNoProviders()">In order to
+            create a consent, you must add at least <strong>two Health Providers</strong></p>
+        <p ng-if="!selectProviderModalVm.hasAtLeastTwoProviders()|| selectProviderModalVm.hasNoProviders()"><a
+                class="btn btn-primary dark-green" ui-sref="fe.provider.lookup">Add a Health Provider</a></p>
+        <p ng-if="selectProviderModalVm.hasAtLeastTwoProviders() && selectProviderModalVm.title === 'Authorize'">Please
+            select <strong>one</strong> individual or organization authorized to share your information:</p>
+        <p ng-if="selectProviderModalVm.hasAtLeastTwoProviders() && selectProviderModalVm.title === 'Disclosure'">Please
+            select <strong>one</strong> individual or organization for disclosure:</p>
+        <div class="row">
+            <div class="col-sm-12 m-b-xs">
+                <h2 ng-if="!selectProviderModalVm.hasNoProviders()"><strong>Individuals:</strong></h2>
+                <div ng-repeat="provider in selectProviderModalVm.providers">
+                    <div ng-if="selectProviderModalVm.isIndividualProvider(provider)">
+                        <div class="radio">
+                            <label>
+                                <input type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"
+                                       ng-value="provider.npi" name="npi"
+                                       ng-disabled="selectProviderModalVm.isSelected(provider.npi)">
+                                <span class="m-l-xs" ng-bind="provider|pcmProviderNameOrFacility"> </span>
+                            </label>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12 m-b-md">
-                        <h2 ng-if="!selectProviderModalVm.hasNoProviders()"><strong>Organization:</strong></h2>
-                        <div ng-repeat="provider in selectProviderModalVm.providers">
-                            <div ng-if="selectProviderModalVm.isOrganizationProvider(provider)">
-                                <div class="radio">
-                                    <label>
-                                        <input type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
-                                        <span class="m-l-xs" ng-bind="provider|pcmProviderNameOrFacility"></span>
-                                    </label>
-                                </div>
-                            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 m-b-md">
+                <h2 ng-if="!selectProviderModalVm.hasNoProviders()"><strong>Organization:</strong></h2>
+                <div ng-repeat="provider in selectProviderModalVm.providers">
+                    <div ng-if="selectProviderModalVm.isOrganizationProvider(provider)">
+                        <div class="radio">
+                            <label>
+                                <input type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"
+                                       ng-value="provider.npi" name="npi"
+                                       ng-disabled="selectProviderModalVm.isSelected(provider.npi)">
+                                <span class="m-l-xs" ng-bind="provider|pcmProviderNameOrFacility"></span>
+                            </label>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white" ng-click="selectProviderModalVm.cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary dark-green" ng-disabled="!selectProviderModalVm.hasAtLeastTwoProviders()" ng-click="selectProviderModalVm.ok()">Add Selected</button>
+        <button type="button" class="btn btn-primary dark-green"
+                ng-disabled="!selectProviderModalVm.hasAtLeastTwoProviders()" ng-click="selectProviderModalVm.ok()">Add
+            Selected
+        </button>
     </div>
 </div>
