--- a/client/app/consent/directives/consentESignature.html
+++ b/client/app/consent/directives/consentESignature.html
@@ -83,7 +83,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <div class="text-navy-blue font-medium font-size16 m-t-xs m-b-xs">To SHARE the following medical
+                <div class="text-navy-blue bold font-size16 m-t-xs m-b-xs">To SHARE the following medical
                     information:
                 </div>
                 <strong>Sensitivity Categories:</strong> <span
@@ -94,7 +94,7 @@
                 </ul>
             </div>
             <div class="col-sm-6">
-                <div class="text-navy-blue font-medium font-size16 m-t-xs m-b-xs"><strong>To SHARE for the following
+                <div class="text-navy-blue bold font-size16 m-t-xs m-b-xs"><strong>To SHARE for the following
                     purpose(s):</strong></div>
                 <ul>
                     <li ng-repeat="purposeOfUse in consentESignatureVm.attestation.purposeOfUseCodes"><span
