--- a/client/app/medicalDocuments/controllers/medicalDocumentInfo.html
+++ b/client/app/medicalDocuments/controllers/medicalDocumentInfo.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
-                <div class="font-medium font-size16 m-t-xs m-b-sm">Medical Document Management</div>
+                <div class="bold font-size16 m-t-xs m-b-sm">Medical Document Management</div>
                 <p>Choose to upload your electronic Medical Documents. Or you may enter your medical information
                     manually.</p>
             </div>
