--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -37,6 +37,7 @@
                                             <small>Forgot Password?</small>
                                         </a>
                                         <p> Version: {{::loginVm.version}} </p>
+                                        <div id="config-error">Sorry, cannot get configuration from server</div>
                                     </div>
                                 </div>
                             </div>
