Implement to get branding logo from server side
#11661 - As a developer, I will have upgrade UI projects to get configuration at run time

--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="m-t m-l-sm">
-                            <img src="assets/img/consent2share_white.png" class="c2sLoginLogo"
+                            <img ng-src="data:image/png;base64,{{loginVm.brandLargeLogo}}" class="c2sLoginLogo"
                                  alt="loginVm.altLogoText">
                             <span class="pull-right m-r-md m-t-xs">
                                 <span class="side-padding10">HOME</span> <span>ABOUT</span>
