--- a/client/app/account/directives/topNavbar.html
+++ b/client/app/account/directives/topNavbar.html
@@ -12,7 +12,8 @@
                         <p></p>
                     </div>
                     <div class="m-t-xs m-r inline">
-                        <img src="assets/img/c2s.png" alt="c2s logo">
+                        <img class="hidden-xs" ng-src="data:image/png;base64,{{topNavbarVm.brandMediumLogo}}" alt="c2s logo">
+                        <img class="visible-xs-inline" ng-src="data:image/png;base64,{{topNavbarVm.brandSmallLogo}}" alt="c2s logo">
                     </div>
                 </div>
             </div>
