Move specifying logo image content type from html to controller
#11661 - As a developer, I will have upgrade UI projects to get configuration at run time

--- a/client/app/account/directives/topNavbar.html
+++ b/client/app/account/directives/topNavbar.html
@@ -12,8 +12,8 @@
                         <p></p>
                     </div>
                     <div class="m-t-xs m-r inline">
-                        <img class="hidden-xs" ng-src="data:image/png;base64,{{topNavbarVm.brandMediumLogo}}" alt="c2s logo">
-                        <img class="visible-xs-inline" ng-src="data:image/png;base64,{{topNavbarVm.brandSmallLogo}}" alt="c2s logo">
+                        <img class="hidden-xs" ng-src="{{topNavbarVm.brandMediumLogo}}" alt="c2s logo">
+                        <img class="visible-xs-inline" ng-src="{{topNavbarVm.brandSmallLogo}}" alt="c2s logo">
                     </div>
                 </div>
             </div>
