Edit config error page
#11661 - As a developer, I will have upgrade UI projects to get configuration at run time

--- a/server/src/main/resources/static/configFailure.html
+++ b/server/src/main/resources/static/configFailure.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Configuration Error</title>
+    <title>C2S | Configuration Error</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Sorry, cannot get configuration!</h1>
+    <div class="container-fluid">
+        <nav class="navbar navbar-default navbar-static-top" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <h3>Consent2Share Configuration Access Failure</h3>
+                </div>
+            </div>
+        </nav>
+        <div class="m-b-lg m-l-none m-r-none">
+            <div class="row">
+                <div class="col-sm-offset-1 col-sm-10">
+                    <h1>Sorry, cannot get configuration!</h1>
+                    <div class="m-t-md">
+                        <label class="m-t-md">Please report this to the administrator if it happened constantly.</label>
+                        <label class="m-t-md">Later, please try to click the link below to login page</label>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-offset-1 col-sm-10 m-t-md">
+                    <a class="btn btn-primary">
+                        Back to Login Page
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
