Add hyperlink to back to login page
#11661 - As a developer, I will have upgrade UI projects to get configuration at run time

--- a/server/src/main/resources/static/configFailure.html
+++ b/server/src/main/resources/static/configFailure.html
@@ -19,17 +19,18 @@
     <div class="m-b-lg m-l-none m-r-none">
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10">
-                <h1 style="font-size: 30px; font-weight: 100; margin: 0 0 10px 0;">Sorry! Could not run application!</h1>
+                <h1 style="font-size: 30px; font-weight: 100; margin: 0 0 10px 0;">Sorry! Could not run
+                    application!</h1>
                 <div>
-
-                    <p style="margin-top: 20px;"><strong>Could not load configuration from the server.</strong> Please return to the Login Page and try again.</p>
+                    <p style="margin-top: 20px;"><strong>Could not load configuration from the server.</strong> Please
+                        return to the Login Page and try again.</p>
                     <p style="margin-top: 20px;">If this persists, please contact your administrator for assistance.</p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10" style="margin-top: 15px;">
-                <a class="btn btn-primary">
+                <a class="btn btn-primary" href="../pp-ui/">
                     Back to Login Page
                 </a>
             </div>
